cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(banking)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/banking)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/banking)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/third-party/CMake-codecov/cmake" ${CMAKE_MODULE_PATH})

if (BUILD_TESTS)
  enable_testing()
  add_subdirectory(third-party/gtest)
  include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
  include_directories(${gmock_SOURCE_DIR}/include ${gmock_SOURCE_DIR})  

  file(GLOB TEST_SOURCES tests/*.cpp)
  add_executable(testing ${TEST_SOURCES})
  target_link_libraries(testing gtest transaction_lib gtest_main account_lib gmock)
  add_test(NAME testing COMMAND testing)

  if (BUILD_COVERAGE)
    set(ENABLE_COVERAGE ON CACHE BOOL "Enable coverage build." FORCE)
    list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
    find_package(codecov)
    add_coverage(testing)
    list(APPEND LCOV_REMOVE_PATTERNS "'${PROJECT_SOURCE_DIR}/data/*'")
    coverage_evaluate()
  endif ()
endif ()